--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -47,6 +47,7 @@
           height='200'
           src='{{media.preview_image.src |  image_url }}'
           class='none'
+          alt='{{currAltText}}'
         >
       {% endif %}
     {% endfor %}
