--- a/assets/output.css
+++ b/assets/output.css
@@ -586,6 +586,14 @@ video {
   position: sticky;
 }
 
+.m-6 {
+  margin: 1.5rem;
+}
+
+.m-4 {
+  margin: 1rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
