--- a/templates/page.aspect.liquid
+++ b/templates/page.aspect.liquid
@@ -1,1 +1,4 @@
-<div class='container mx-auto px-4 aspect-video bg-red-400'></div>
+<div
+  class='container mx-auto px-4 grid grid-cols-2 gap-4 aspect-video bg-red-400'
+>
+</div>
